[package]
name = "hello-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "^0.12.0"
bevy_core = "^0.12.0"
bevy_app = "^0.12.0"
bevy_time = "^0.12.0"
bevy_input = "^0.12.0"
gemini-engine = "0.9.2"
rand = "0.8.5"
console = "0.15.7"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
